# autoImageRenamer

./: .coveragerc  .gitignore  AUTHORS.rst  LICENSE.txt  README.md  README.rst  TODO.md  autoImageRename.ps1  imageRenamer.py  pyproject.toml  rename.ps1  requirements.txt  setup.cfg  setup.py  test.ps1
.github/workflows/: ci.yml
docs/: conf.py  index.rst
src/autoImageRenamer/: __init__.py  __main__.py  autoImageRenamer.py
src/imageRenamer/: ImageRenamer.py
tests/: .gitignore  TestHelpers.py  conftest.py  test.py  test_ArtificialDatasets.py  test_autoImageRenamer.py  test_privateDataset.py
