[tool.poetry]
name = "autoImageRenamer"
version = "1.0.0"
description = "Automatic image and video renaming targeting a filename with the date and time of the image taken."
authors = ["Roman Koller <github@roman-koller.ch>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "autoImageRenamer", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
docopt = "0.6.2"
ExifRead = "2.3.2"
loguru = "0.5.3"
exif = "1.3.2"
Pillow = "8.3.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autoImageRenamer = "autoImageRenamer.__main__:main"
